*Tech* : add some css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 
     <script src="node_modules/zone.js/dist/zone.js"></script>
     <script src="node_modules/reflect-metadata/Reflect.js"></script>
+    <!-- SystemJS to load app and library modules, may be changed to webpack-->
     <script src="node_modules/systemjs/dist/system.src.js"></script>
+
 
     <!-- 2. Configure SystemJS -->
     <script src="systemjs.config.js"></script>
